test/assets/invalid/signatures/wrong-monad-child.hs
a :: Maybe Int
a = do
    Just ()